--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "postcss-loader": "^7.0.2",
     "react": "^18.2.0",
@@ -39,5 +40,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:8000/"
 }
+
